--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Jeu du Serpent</title>
+        <title>Snake game</title>
         <script src="script.js"></script>
     </head>
     <body>
